Clean configure.ac.

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,8 @@
-AC_INIT([simple_gpu], [1.0], [scemama@users.noreply.github.com])
-AM_INIT_AUTOMAKE([foreign -Wall -Werror])
+AC_INIT([simple_gpu], [1.0], [https://github.com/scemama/simple_gpu])
+AC_CONFIG_MACRO_DIR([m4])
+AC_CONFIG_AUX_DIR([build-config])
+
+AM_INIT_AUTOMAKE([foreign -Wall -Werror color-tests parallel-tests silent-rules])
 AC_PROG_CC
 AC_PROG_FC
 AC_PROG_RANLIB
